--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    tools:context=".DashboardActivity">
+    tools:context=".activity.DashboardActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -157,7 +157,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="BottomNavigation" />
+                    android:text="Bottom Nav" />
 
                 <Button
                     android:id="@+id/btnRecycleView"
@@ -180,6 +180,15 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Shared Pref" />
+
+
+                <Button
+                    android:id="@+id/btnSpinner"
+                    android:layout_marginLeft="5dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Spinner" />
             </LinearLayout>
 
         </LinearLayout>
