--- a/app/src/main/res/layout/activity_first_params.xml
+++ b/app/src/main/res/layout/activity_first_params.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context=".FirstParamsActivity">
+    tools:context=".activity.FirstParamsActivity">
 
     <EditText
         android:id="@+id/etName"
