--- a/app/src/main/res/layout/activity_spinner.xml
+++ b/app/src/main/res/layout/activity_spinner.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.SecondParamsActivity">
+    android:padding="50dp"
+    tools:context=".activity.SpinnerActivity">
 
-    <TextView
-        android:id="@+id/txtParamValue"
+    <Spinner
+        android:id="@+id/spinner"
+        android:entries="@array/months"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
